# ws-Chrome_leaf

./: .gitignore  README.md  Structure.md
chrome_leap-client/: Cargo.toml
chrome_leap-client/src/: main.rs
chrome_leap-client/src/utils/: chrome.rs  os_check.rs
chrome_leap-client/tests/: gen_cert.rs
chrome_leap-server/: Cargo.toml  config.toml
chrome_leap-server/src/: main.rs
chrome_leap-server/src/utils/: chrome.rs  mod.rs  os_check.rs
ver1/: README.md
ver1/chrome-ext/: manifest.json
ver1/chrome_leap/: client.py  server.py
ver1/chrome_leap/chrome-ext/: background.js
ver1/extra/: igonnaplayonow.py  server.py
ver1/extra/ano/: templete.py
ver1/extra/test/: server.py  test.html  test_control.html
ver1/test/: server_sample.py
