[package]
name = "chrome_leap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcgen = "0.9"
quinn = "0.11"
x11rb = "0.13.2"
rdev = "0.5.3"
x-win = "5.3.2"
