[package]
name = "chrome_leap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcgen = "0.9"
quinn = "0.11"
x11rb = "0.13.2"
rdev = "0.5.3"
x-win = "5.3.2"
hostname = "0.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug", 
] }

dotenv = "0.15"
